# MagicFS

./: .gitignore  CHANGES_INTENT.md  CHARTER.md  CLAUDE.md  CONCEPTS.md  CONCEPT_THIN_CLIENT.md  CRUCIAL_LEARNINGS.md  CURRENT_HANDOFF.md  Cargo.toml  HANDOVER.md  NEXT_SESSION_HANDOFF.md  PERFORMANCE_OPTIMISATION.md  PHASE_39_SUMMARY.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SESSION_HANDOFF_2025-12-27.md  SESSION_HANDOFF_2025-12-27_SQLITEVEC_FIXED.md  SESSION_HANDOFF_2025-12-28_AMNESIAC_DELETION_FIX.md  SESSION_HANDOFF_2025-12-28_FASTEMBED_SEGFAULT.md  SESSION_HANDOFF_2025-12-28_INODE_AND_SEARCH_FIXES.md  SESSION_HANDOFF_2025-12-28_SEGFAULT_FIX.md  SESSION_HANDOVER_SUMMARY.md  SPEC_AUTO_ORGANIZATION.md  SPEC_PERSISTENCE.md  TODO.md  create_test_db.rs  create_test_db.sh  dev.sh  dev_single.sh  serious_diff.txt  test_06_rich_media.py  test_inbox_manual.sh  test_zero_only.py  verify_phase40.sh
pkg/: PKGBUILD
pkg/magicfs/: FETCH_HEAD  config  packed-refs
scripts/: magicfs-manager
src/: error.rs  hollow_drive.rs  lib.rs  librarian.rs  main.rs  oracle.rs  state.rs
src/core/: bouncer.rs  inode_store.rs  mod.rs  permissions.rs
src/engine/: indexer.rs  mod.rs  searcher.rs
src/storage/: connection.rs  file_registry.rs  init.rs  mod.rs  repository.rs  text_extraction.rs  vec_index.rs
systemd/: magicfs.service
tests/: common.py  run_single.sh  run_suite.sh  validate_fix.py  verify.py
tests/cases/: test_00_stress.py  test_01_indexing.py  test_02_dotfiles.py  test_03_search.py  test_04_hardening.py  test_05_chunking.py  test_07_real_world.py  test_08_safety.py  (+45 more)
(+5 files in other folders)
