# FILE: Cargo.toml
[package]
name = "magicfs"
version = "0.1.0"
edition = "2021"

[dependencies]
# FUSE Filesystem
fuser = "0.14"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }
sqlite-vec = "0.1"

# Vector Embeddings
# CRITICAL UPDATE: Bump to v5 to get Snowflake support
fastembed = "5"

# File Watching
notify = "6.0"
walkdir = "2.0"

# State Management & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
libc = "0.2"
lru = "0.12"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Utilities
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "1.0"
bytemuck = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
